--- a/packages/events/package.json
+++ b/packages/events/package.json
@@ -24,5 +24,8 @@
     ],
     "devDependencies": {
         "@types/node": "^14.14.12"
+    },
+    "publishConfig": {
+        "access": "public"
     }
 }
