--- a/package.json
+++ b/package.json
@@ -2,6 +2,18 @@
   "name": "xroom.app",
   "private": false,
   "devDependencies": {
+    "@types/jest": "^26.0.19",
+    "eslint": "^7.10.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^23.20.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "husky": "^5.0.6",
+    "jest": "^26.4.2",
     "lerna": "^3.22.1"
+  },
+  "scripts": {
+    "test": "npx jest"
   }
 }
