Added publish config to process limiter

--- a/packages/process-limiter/package.json
+++ b/packages/process-limiter/package.json
@@ -26,5 +26,8 @@
     "dependencies": {},
     "devDependencies": {
         "@types/node": "^11.13.4"
+    },
+    "publishConfig": {
+        "access": "public"
     }
 }
