--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "scripts": {
     "test": "npx jest",
-    "coverage": "npx jest --coverage && rm coverage -rf"
+    "coverage": "npx jest --coverage && rm coverage -rf",
+    "lerna-publish": "lerna publish from-package --git-tag-version"
   }
 }
