--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -92,6 +92,7 @@
     "jsx-quotes":["error", "prefer-single"],
     "jest/no-hooks": "off",
     "jest/prefer-expect-assertions": "off",
+    "jest/prefer-todo": "off",
     "jest/valid-expect-in-promise": "off",
     "key-spacing": ["error", { "beforeColon": false, "afterColon": true, "mode": "minimum" }],
     "keyword-spacing": ["error", { "before": true, "after": true }],
