--- a/package.json
+++ b/package.json
@@ -11,12 +11,24 @@
     "eslint-plugin-standard": "^4.0.1",
     "husky": "^5.0.6",
     "jest": "^26.4.2",
-    "lerna": "^3.22.1"
+    "lerna": "^3.22.1",
+    "typescript": "^4.2.0-dev.20210125",
+    "typescript-coverage-report": "^0.4.0"
   },
   "scripts": {
-    "test": "npx jest",
-    "check": "npm test && tsc && npx eslint packages",
-    "coverage": "npx jest --coverage && rm coverage -rf",
+    "test": "npx jest --coverage && rm coverage -rf",
+    "check": "npm test && tsc && npm run type-coverage && npx eslint packages",
+    "type-coverage": "npx typescript-coverage-report -t 100 -o coverage && rm coverage -rf",
     "lerna-publish": "lerna publish from-package"
+  },
+  "jest": {
+    "coverageThreshold": {
+      "global": {
+        "branches": 100,
+        "functions": 100,
+        "lines": 100,
+        "statements": 100
+      }
+    }
   }
 }
